Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114707

Qdoc ignores the excludedirs config for example files list

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • None
    • 6.5.1
    • Build tools: qdoc
    • None
    • Linux/X11
    • df3e4ac71 (dev), 979da8f03 (6.6)
    • DaVinci 82

    Description

      The Qt for MCUs project config uses the excludedirs config to exclude some of the 3rdparty sources in the demos. Otherwise, the list of example files is too long for some of these demos. Qdoc still lists the project files (CMakeLists.txt, .qrc, .pro, .qmproject, .pyproject, qmldir) in those directories.

      Attachments

        For Gerrit Dashboard: QTBUG-114707
        # Subject Branch Project Status CR V

        Activity

          People

            veshivas Venugopal Shivashankar
            veshivas Venugopal Shivashankar
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes