qdoc: Ensure the example files list is correct

Qdoc ignores the excludedirs config while generating
the example sources list. The sources list is generated
in two phases, first picks everything in the dir besides
the excluded dirs and files, while the second one picks
only the project files without considering the exclude
dirs and files.

As a result, the source files list in the example
documentation includes project files from the excluded
dirs.

Task-number: QTBUG-114707
Change-Id: I5c279e3f67f5bbb5ab56b695e980ceedf48572a5
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
(cherry picked from commit df3e4ac71aaca94b9a1680c58702280afa15607b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>